kubernetes/phstudio-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: phstudio
  labels:
    name: phstudio
